{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "10beb4c4-29c8-441d-8b45-ff94e6b4f4b7",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "384e02ce-92a6-4fd6-a72f-614a79f7b64d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "770eb035-71cc-48bf-ac31-88449895f983",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "2a741ebc-ac39-4cf0-bf87-72e276116d8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "d2b539b8-d235-443c-a5c0-589580923ede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eedaea9e-91bd-4e43-ab72-2fde3c75b85e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e5693dd-e7f0-4246-8c21-9e6f58361112",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cffb17ba-bf16-402e-b849-06aa00ca53be",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e1c2796-648e-4e3d-9998-650520317b8d",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement2",
            "id": "353b36ca-70d9-44af-a05f-79f17e0feca6",
            "actions": [
                {
                    "name": "Move2",
                    "type": "PassThrough",
                    "id": "64bb6dd3-6d4a-4ede-acd3-08d046bfe068",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump2",
                    "type": "Button",
                    "id": "e94648d2-31d1-43d2-952f-02f81926e23b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch2",
                    "type": "Button",
                    "id": "182b190c-b828-4449-9b3c-917c98dcfdfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Punch2",
                    "type": "Button",
                    "id": "e36af6eb-5870-495f-9a31-9d17582ad9d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "808295fe-a8b5-4517-9e46-ab006e90aa4a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "016eb2a3-65de-489e-95bb-1cb0df3a6c13",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d19f7718-8ac5-4bf2-a524-5775874f4600",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Crouch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f2f59c2-bce2-4128-99ea-bb5f51e915ac",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Punch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControls",
            "bindingGroup": "PlayerControls",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}